# mysqlorm

./: CMakeLists.txt  main.cpp  main.sql  readme.md
examples/: batch.cpp  connection_pool.cpp  database.cpp  delete.cpp  extra.cpp  insert.cpp  insert_batch.cpp  join.cpp  select.cpp  transaction.cpp  update.cpp
models/: fans.h  user.h
myorm/: batch.h  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  database.cpp  database.h  model.h  query.h  transaction.cpp  transaction.h
utils/: logger.cpp  logger.h  value.cpp  value.h
